--- a/back-end/.env
+++ b/back-end/.env
@@ -1,1 +1,1 @@
-MONGO_URL =mongodb+srv://mern-stack-e-commerce:ooPbJJpHjwsWQnhO@cluster0.xbog4ly.mongodb.net/
+MONGO_URL =mongodb+srv://mern-stack-e-commerce:ooPbJJpHjwsWQnhO@cluster0.xbog4ly.mongodb.net/mern-e-commerce
